# CPP-Design-Patterns

./: Adapter_Object.cpp  Bridge.cpp  Builder.cpp  CMakeLists.txt  Composite.cpp  Decorator.cpp  Factory.cpp  Flyweight.cpp  Observer.cpp  by_move.cpp  count_if.cpp  for_each.cpp
Abstract Factory/GUI_Example/: GUI.hpp  GUIFactory.hpp
Abstract Factory/General_Template/: ConcreteFactory.hpp  ConcreteProduct.hpp  IAbstractFactory.hpp  IAbstractProduct.hpp
Builder/Computer_Example/: Computer.hpp  ComputerBuilder.hpp
Factory/General_Template/: ConcreteFactoryA.hpp  ConcreteProduct.hpp  IFactory.hpp  IProduct.hpp
Factory/Logger_Example/: Logger.hpp  LoggerFactory.hpp
Observer/: ConcreteObservable.hpp  ConcreteObserver.hpp  IObservable .hpp  IObserver.hpp
Singletone/: Singletone.cpp
